flapivor/tests/m1/hopix/parser/bad/93-case-6.hopix
val omg =
 case some_value {
 | "Some string" => 0
 | 0 -> 1
 | 'a' => 2
 }